--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -403,7 +403,7 @@
 
 <div class="">
     <div class=" statementPersonas webmdBlue ">Our personas</div>
-      <p class="personaDes webmdGreen">WebMD has a widely varied clientle, that can be difficult to please</p>
+      <p class="personaDes">WebMD has a widely varied clientle, that can be difficult to please</p>
 </div>
 
 
@@ -411,7 +411,7 @@
 
 <table  class="personas">
   <!-- GIT HUB class="col-md-4" -->
-    <caption class="personaTypes text-center"> Jenny, 68, Grandma</caption>
+    <caption class="personaTypes text-center webmdGreen"> Jenny, 68, Grandma</caption>
   <tbody class="text-center">
   <tr>
     <td class="">
@@ -447,7 +447,7 @@
 
 
 <table class="personas">
-  <caption class="personaTypes text-center"> Steve, 28, Software Engineer</caption>
+  <caption class="personaTypes text-center webmdGreen"> Steve, 28, Software Engineer</caption>
 <tbody class="text-center">
 <tr>
     <td class="">
@@ -483,7 +483,7 @@
 
 
 <table class="personas">
-  <caption class="personaTypes text-center">Sharon, 40, Mom</caption>
+  <caption class="personaTypes text-center webmdGreen">Sharon, 40, Mom</caption>
 
 <tbody class="text-center">
 <tr>
@@ -533,6 +533,60 @@
       <p class= "problemSubText">It's not easy to find only the articles pertinent to them or their family </p> </div>
     </div>
 
+</div>
+
+  <div class="statement webmdBlue">Checking in with Business Goals</div>
+
+<div class="businessGoals">
+    <div class="businessGoalsIntro">
+        <p class="businessGoalsSub">Must. Have. Ads. Lots. Of. Ads.</p>
+        <p class="businessGoalsSubText">Many of <b>our competitors were reluctant to recommend changes to WebMd website becasue of its ads.</b> Ads are the main revenue stream for the site (although not for the company overall), and the pervasive business concern. <b>But we think they can&#39;t see the forest for the trees.</b></p>
+    </div>
+
+  <div class="businessGoalsBullets">
+    <div class="busGoalBulletImgDiv">
+      <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">  </div>
+    <div class="busGoalsBulletTextDiv">
+      <p class="busGoalsBulletText">With our approach people would be much more likley to come to WebMD and they would stay longer, making the potential that they actually read the ads much higher. Reducing the ads on the app, even drastically, won’t mean reduced visibility it will actually mean much higher visibility.<p>
+    </div>
+  </div>
+
+  <div class="trees">
+    <div class="treesNow">
+        <p class="treesTitle">Average per year <b>views now</b></p>
+        <img class="trees4" alt="4 Trees" src="myimages/webmd/synthesis/trees-now.png ">
+    </div>
+
+    <div class="treesPotential">
+        <p class="treesTitle"><b>Potential views</b> with Health Care Hub App, & Wearable</p>
+        <img class="trees365" alt="365 Trees" src="myimages/webmd/synthesis/trees-potential.png ">
+    </div>
+  </div>
+
+  <div class="businessGoalsBullets">
+    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <p class="busGoalsBulletText">WebMd will receive a new revenue stream from a co-market werarble<p>
+  </div>
+
+  <div class="businessGoalsBullets">
+    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <p class="busGoalsBulletText">Revenue from additional API agreements (other fitness devices)<p>
+  </div>
+
+  <div class="businessGoalsBullets">
+    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <p class="busGoalsBulletText">Improved user loyalty, less ads, less likely to leave the site, better retention<p>
+  </div>
+
+  <div class="businessGoalsBullets">
+    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <p class="busGoalsBulletText">Change the reputation of WebMd as an outdated and &#34;scarey&#34; site to one of innovation an cutting edge technology and  user experience<p>
+  </div>
+
+  <div class="businessGoalsBullets">
+    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <p class="busGoalsBulletText">Potential new revenue stream, selling user data<p>
+  </div>
 </div>
 
 <div class="statement webmdBlue">Our solution: WebMD Strong</div>
