Add empathy map

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -395,10 +395,19 @@
 
 <div class="centerAMap">
   <p class="affinity webmdBlue">Our affinity map</p>
-  <p class="affinityDes">A brainstorming tool that helps us to outline the users key pain points</p>
+  <p class="affinityDes">Using this brainstorming tool that helped us to outline the users key pain points</p>
 
   <img class="affinityMap" alt="Affinity Map" src="myimages/webmd/synthesis/affinity.png">
 </div>
+
+
+<div class="centerEMap">
+  <p class="empathy webmdGreen">Our empathy map</p>
+  <p class="affinityDes"> Helped us get into the mindset of those using webMd: They are often sick, scared, and worried.</p>
+
+  <img class="empathyMap" alt="Affinity Map" src="myimages/webmd/synthesis/empathy-map.png">
+</div>
+
 
 
 <div class="">
