change font size on tree titles

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -554,11 +554,8 @@
     </div>
 
   <div class="businessGoalsBullets">
-    <div class="busGoalBulletImgDiv">
-      <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">  </div>
-    <div class="busGoalsBulletTextDiv">
+      <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
       <p class="busGoalsBulletText">With our approach people would be much more likley to come to WebMD and they would stay longer, making the potential that they actually read the ads much higher. Reducing the ads on the app, even drastically, won’t mean reduced visibility it will actually mean much higher visibility.<p>
-    </div>
   </div>
 
   <div class="trees">
@@ -575,7 +572,7 @@
 
   <div class="businessGoalsBullets">
     <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">WebMd will receive a new revenue stream from a co-market werarble<p>
+    <p class="busGoalsBulletText">WebMd will receive a new revenue stream from a co-market werarble</p>
   </div>
 
   <div class="businessGoalsBullets">
@@ -689,6 +686,9 @@
     </div>
 
 <div class="statement webmdBlue">User testing</div>
+
+<!-- user testing -->
+
 
 <!-- <div class="testingCircleSec">
   <div class="userTestingRounds"><p >Three Rounds</p></div>
