--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -561,12 +561,12 @@
   <div class="trees">
     <div class="treesNow">
         <p class="treesTitle">Average per year <b>views now</b></p>
-        <img class="trees4" alt="4 Trees" src="myimages/webmd/synthesis/trees-now.png ">
+        <img class="trees4 treesTotal" alt="4 Trees" src="myimages/webmd/synthesis/trees-now.png ">
     </div>
 
     <div class="treesPotential">
-        <p class="treesTitle"><b>Potential views</b> with Health Care Hub App, & Wearable</p>
-        <img class="trees365" alt="365 Trees" src="myimages/webmd/synthesis/trees-potential.png ">
+        <p class="treesTitle"><b>Potential views</b> App & Wearable</p>
+        <img class="trees365 treesTotal" alt="365 Trees" src="myimages/webmd/synthesis/trees-potential.png ">
     </div>
   </div>
 
