add low fidelity prototypes

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -62,7 +62,7 @@
               </div>
               <div class="webmdLogoAndTitle">
                 <p class="projectTitle">WebMD Strong</p>
-                <p class="projectTitle">Your Healthcare Hub</p>
+                <p class="projectTitle2 white">Your Healthcare Hub</p>
                 <p class="projectSubTitle">Biometric Generated News Native App & Companion Wearable</p>
               </div>
           </div>
@@ -550,12 +550,12 @@
 <div class="businessGoals">
     <div class="businessGoalsIntro">
         <p class="businessGoalsSub">Must. Have. Ads. Lots. Of. Ads.</p>
-        <p class="businessGoalsSubText">Many of <b>our competitors were reluctant to recommend changes to WebMd website becasue of its ads.</b> Ads are the main revenue stream for the site (although not for the company overall), and the pervasive business concern. <b>But we think they can&#39;t see the forest for the trees.</b></p>
+        <p class="businessGoalsSubText">Many of <b>our competitors were reluctant to recommend changes to WebMd website becasue of its ads.</b> Ads are the main revenue stream for the site (although not for the company overall) and the pervasive business concern.<br><b>But we think they can&#39;t see the forest for the trees.</b></br></p>
     </div>
 
   <div class="businessGoalsBullets">
-      <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
-      <p class="busGoalsBulletText">With our approach people would be much more likley to come to WebMD and they would stay longer, making the potential that they actually read the ads much higher. Reducing the ads on the app, even drastically, won’t mean reduced visibility it will actually mean much higher visibility.<p>
+      <img class="busGoalBulletImg busGoalBulletImg1" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png">
+      <p class="busGoalsBulletText">With our approach people would be much more likely to come to WebMD and stay longer. Therefore, reducing the ads on the app, even drastically, won&#39;t mean reduced ad visibility, it will actually be much higher.</p>
   </div>
 
   <div class="trees">
@@ -586,13 +586,13 @@
   </div>
 
   <div class="businessGoalsBullets">
-    <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
+    <img class="busGoalBulletImg busGoalBulletImg2" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
     <p class="busGoalsBulletText">Change the reputation of WebMd as an outdated and &#34;scarey&#34; site to one of innovation an cutting edge technology and  user experience<p>
   </div>
 
-  <div class="businessGoalsBullets">
+  <div class="businessGoalsBullets busGoalBullet3">
     <img class="busGoalBulletImg" alt="Bullet" src="myimages/webmd/synthesis/cross-bullet.png ">
-    <p class="busGoalsBulletText">Potential new revenue stream, selling user data<p>
+    <p class="busGoalsBulletText ">Potential new revenue stream, selling user data<p>
   </div>
 </div>
 
@@ -640,23 +640,23 @@
   <!-- <div class="realTimeAndNur2 col-xs-12 col-sm-offset-1 col-sm-5"> -->
         <p class="experienceTitleIcon ">Healthcare Hub</p>
         <div class="iconSentence ">
-          <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+          <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2 ">All your healthcare information, all sources, all in one place </p>
         </div>
         <div class="iconSentence">
-        <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+        <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2">Simple quick on-boarding</p>
         </div>
         <div class="iconSentence">
-        <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+        <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2">Easy to used preferences, help you to choose topics</p>
         </div>
         <div class="iconSentence ">
-          <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+          <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2 ">Changes preferences quickly on-the-go</p>
         </div>
         <div class="iconSentence ">
-            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
           <p class="experienceSentence2 ">Regular medication alerts</p>
         </div>
   </div>
@@ -666,19 +666,19 @@
             <p class="experienceTitleIcon">Wearable</p>
             <div class="iconSentence">
             <!-- <img class="featureIconWatch" alt="Apple watch Icon" src="myimages/webmd/synthesis/apple-watch.png"> -->
-            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
             <p class="experienceSentence2">Generate real-time health and fitness data (steps, HR, bp...)</p>
           </div>
           <div class="iconSentence">
-              <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+              <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
             <p class="experienceSentence2">Real-time news & info relavant to your physical condition</p>
           </div>
           <div class="iconSentence">
-            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
             <p class="experienceSentence2">Read urgent news, texts, or social media right on your wrist</p>
           </div>
           <div class="iconSentence">
-            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/hub-logo.png">
+            <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/cross-bullet.png">
             <p class="experienceSentence2">Real-time alerts due to changes in your physical condition</p>
           </div>
   </div>
@@ -712,45 +712,91 @@
   <img class="prototypeImg" alt="Medium Fidelity Prototype" src="myimages/tier5/design/med-fid-proto.png">
     <p class="protoTypes">Medium Fidelity Digital</p>
   </div>
+</div> -->
+
+<!-- <div><p class="statement">User testing with  prototypes.</p></div> -->
+
+<!-- USER TESING -->
+<div class="tasksDiv">
+  <div class="tasks">Initial Tasks Tested</div>
+  <div class="taskSections">
+      <div class="taskCircle"><p>1</p></div>
+
+      <div class="taskText">
+        <div class="taskPoints "><p>Successfully search for sleep apnea article on app</p></div>
+        <div class="approachSubPoints"><p>Outcomes: 2+ ways to find an article</p></div>
+      </div>
+  </div>
+
+  <div class="taskSections">
+
+      <div class="taskCircle"><p class="decNumber">2</p></div>
+      <div class="taskText">
+          <div class="taskPoints">
+            <p>Change your perferences on-the-go </p>
+          </div>
+
+          <div class="approachSubPoints">
+            <p>Outcomes: change prefrences at the news feed level, articles, or profile</p>
+          </div>
+        </div>
+    </div>
+
+  <div class="taskSections">
+      <div class="taskCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
+      <div class="taskText">
+      <div class="taskPoints"><p>Read an article </div>
+        <div class="approachSubPoints "><p>Outcomes: click into read an article, scroll to read the article, select a new article, provide feedback on the article</p></div>
+      </div>
+  </div>
+
+  <div class="taskSections">
+      <div class="taskCircle decCircle3"><p class="decNumber decNumber3">4</p></div>
+      <div class="taskText">
+      <div class="taskPoints"><p>Identifying biometric-generated articles from your feed</div>
+      </div>
+  </div>
+
+<!-- tasks -->
 </div>
 
-<div><p class="statement">User testing with paper prototypes.</p></div> -->
+  <div class="lowFiPro webmdBlue">Several Low-Fidelity Digital Prototypes Tested</div>
 
 <!-- top 3 paper proptotypes -->
-  <!-- <div class="paperPrototypes">
+  <div class="paperPrototypes">
     <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch3.png">
-    <p class="octoOrange paperProtoText">High-volume lead search filters</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-home.png">
+    <p class="paperProtoText">App Home Page</p>
     </div>
 
     <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch1.png">
-    <p class="octoOrange paperProtoText">Homepage with card view</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-changing-pref.png">
+    <p class=" paperProtoText">Modifying preferences fast on-the-go</p>
     </div>
 
     <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch2.png">
-    <p class="octoOrange paperProtoText">Homepage with connectivity view</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-article.png">
+    <p class="paperProtoText">Article view</p>
     </div>
-  </div> -->
+  </div>
 <!-- bottom 3 paper proptotypes -->
-  <!-- <div class="paperPrototypes">
+  <div class="paperPrototypes">
 
   <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch5.png" >
-    <p class="octoOrange paperProtoText">List view with feedback prompt</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding1.png" >
+    <p class="paperProtoText">Intro to quick on-boarding</p>
   </div>
 
     <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch4.png">
-    <p class="octoOrange paperProtoText">Individual search view</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding2.png">
+    <p class="paperProtoText">Choosing your news &amp info preferences</p>
     </div>
 
     <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/tier5/design/sketch6.png">
-    <p class="octoOrange paperProtoText">Individual lead profile with newsfeed</p>
+    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding3.png">
+    <p class="paperProtoText">Easy wearable set up</p>
     </div>
-  </div> -->
+  </div>
 
 <div><p class="statement usabilityTitle webmdGreen">Usability testing: user feedback</p></div>
 
@@ -837,8 +883,8 @@
 
   <!-- top and bottom 3 -->
 </div>
-<!-- grandparents
-</div> -->
+<!-- grandparents -->
+<!-- </div> -->
 
 <div><p class="statement webmdBlue">Usability test findings</p></div>
 
