Completed Most of Design section

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -76,7 +76,7 @@
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle webmdGreen">My Role</p>
-            <p class="boxText heavyText"> The three of us worked collaboratively as a team for 2 weeks, each of us participated in the entire design processes. However, my most prominent roles were in: ideation, concept creation, survey and interview question development, interviews, design, task analysis, user testing, presentation creation and delivery.
+            <p class="boxText heavyText"> The three of us worked collaboratively as a team for 2 weeks, each of us participated in the entire design processes. My most prominent roles were in: ideation, concept creation, wearable proptotyping, survey and interview question development, interviews, design, task analysis, user testing, presentation creation and delivery.
           </p>
       </div>
         </div>
@@ -717,23 +717,28 @@
 <!-- <div><p class="statement">User testing with  prototypes.</p></div> -->
 
 <!-- USER TESING -->
+<div class="iphone6ImgDiv">
+  <img class="iphone6Img" alt="iPhone 6 Used for Testing" src="myimages/webmd/design/iphone6-tesing.png">
+</div>
+
 <div class="tasksDiv">
   <div class="tasks">Initial Tasks Tested</div>
   <div class="taskSections">
       <div class="taskCircle"><p>1</p></div>
 
       <div class="taskText">
-        <div class="taskPoints "><p>Successfully search for sleep apnea article on app</p></div>
-        <div class="approachSubPoints"><p>Outcomes: 2+ ways to find an article</p></div>
+        <div class="taskPoints "><p>Use of on-boarding </p></div>
+        <div class="approachSubPoints"><p>Outcomes: complete the on-boarding or skip ahead before finished</p></div>
       </div>
   </div>
 
   <div class="taskSections">
 
-      <div class="taskCircle"><p class="decNumber">2</p></div>
+      <div class="taskCircle"><p class="
+        ">2</p></div>
       <div class="taskText">
           <div class="taskPoints">
-            <p>Change your perferences on-the-go </p>
+            <p>Change your preferences on-the-go </p>
           </div>
 
           <div class="approachSubPoints">
@@ -745,22 +750,49 @@
   <div class="taskSections">
       <div class="taskCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
       <div class="taskText">
-      <div class="taskPoints"><p>Read an article </div>
-        <div class="approachSubPoints "><p>Outcomes: click into read an article, scroll to read the article, select a new article, provide feedback on the article</p></div>
+        <div class="taskPoints "><p>Successfully search for sleep apnea article on app</p></div>
+        <div class="approachSubPoints"><p>Outcomes: 2+ ways to find an article</p></div>
       </div>
   </div>
 
   <div class="taskSections">
       <div class="taskCircle decCircle3"><p class="decNumber decNumber3">4</p></div>
       <div class="taskText">
-      <div class="taskPoints"><p>Identifying biometric-generated articles from your feed</div>
+        <div class="taskPoints"><p>Read an article </div>
+          <div class="approachSubPoints "><p>Outcomes: click into read an article, scroll to read the article, select a new article, provide feedback on the article</p></div>
       </div>
   </div>
+
+  <div class="taskSections">
+      <div class="taskCircle decCircle3"><p class="decNumber decNumber3">5</p></div>
+      <div class="taskText">
+      <div class="taskPoints"><p>Identifying biometric-generated articles from feed</div>
+      </div>
+  </div>
+
 
 <!-- tasks -->
 </div>
 
   <div class="lowFiPro webmdBlue">Several Low-Fidelity Digital Prototypes Tested</div>
+  <!-- bottom 3 paper proptotypes -->
+    <div class="paperPrototypes">
+
+    <div class="paperProtoDiv">
+      <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding1.png" >
+      <p class="paperProtoText">Intro to quick on-boarding</p>
+    </div>
+
+      <div class="paperProtoDiv">
+      <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding2.png">
+      <p class="paperProtoText">Choosing your news &amp info preferences</p>
+      </div>
+
+      <div class="paperProtoDiv">
+      <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding3.png">
+      <p class="paperProtoText">Easy wearable set up</p>
+      </div>
+    </div>
 
 <!-- top 3 paper proptotypes -->
   <div class="paperPrototypes">
@@ -779,24 +811,6 @@
     <p class="paperProtoText">Article view</p>
     </div>
   </div>
-<!-- bottom 3 paper proptotypes -->
-  <div class="paperPrototypes">
-
-  <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding1.png" >
-    <p class="paperProtoText">Intro to quick on-boarding</p>
-  </div>
-
-    <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding2.png">
-    <p class="paperProtoText">Choosing your news &amp info preferences</p>
-    </div>
-
-    <div class="paperProtoDiv">
-    <img class="paperProtoImg" alt="Paper Prototype" src="myimages/webmd/design/app-on-boarding3.png">
-    <p class="paperProtoText">Easy wearable set up</p>
-    </div>
-  </div>
 
 <div><p class="statement usabilityTitle webmdGreen">Usability testing: user feedback</p></div>
 
@@ -804,79 +818,84 @@
 
   <div class="feedbackParent">
 <!-- col-md-5 col-md-offset-1 -->
-    <div class="testingFeedback feedbackParentGreen">
-      <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/design-funnel-icon.png">
-      <p class="experienceBox">Quick, easy-to-use filters to target leads</p>
+    <div class="testingFeedback webmdBlueBack white">
+      <!-- <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/design-funnel-icon.png"> -->
+      <p class="experienceBox">On-Boarding</p>
     </div>
 
     <div class="feedbackP heavyText">
-      <p>"<b>I like this it's super simple,</b> maybe just show country first and then city and state once you populate country."</p>
+    <p class="feedbackPText"><b>"I alwasy skip these things, but this was so simple and fast I forgot to skip it."</b></p>
+
     </div>
 
   </div>
 
 <div class="feedbackParent">
 
-  <div class="testingFeedback feedbackParentLightGreen">
-    <img class="featureIcon" alt="US Map Icon" src="myimages/tier5/design/us-icon.png">
-    <p class="experienceBox">Analytics overview to size-up lead list</p>
+  <div class="testingFeedback lightBlueBack charcol">
+    <!-- <img class="featureIcon" alt="US Map Icon" src="myimages/tier5/design/us-icon.png"> -->
+    <p class="experienceBox">Landing Page</p>
   </div>
 
-    <div class="feedbackP heavyText">
-      <p>"The graphs are very helpful, the geography is really cool. <b>As a dashboard landing page this is pretty solid."</b></p>
+  <div class="feedbackP heavyText">
+    <p class="feedbackPText"><b>"I love this!You have my steps and all my personal news at the top</b>,but still trending articles to keeps me up the latest health news.</p>
     </div>
 
   </div>
 
   <div class="feedbackParent">
 
-    <div class="testingFeedback feedbackParentCharcol">
-      <img class="featureIcon" alt="Eye Icon" src="myimages/tier5/design/design-eye-icon.png">
-      <p class="experienceBox">Multiple views, fits any preference</p>
+    <div class="testingFeedback charcolBack">
+      <!-- <img class="featureIcon" alt="Eye Icon" src="myimages/tier5/design/design-eye-icon.png"> -->
+      <p class="experienceBox">On-The-Go Preferences</p>
     </div>
 
     <div class="feedbackP heavyText">
-      <p>"I prefer the list view, more information. But <b>I also like how the card view gives me more at once at a higher view."</b></p>
+  <p><b>"I don't undestand the difference between 'heart' and bookmark?</b> And what do those thumbs up mean? Is this facebook or a health site?</p>
     </div>
 
   </div>
 
 </div>
+
+<!-- Bottom -->
+
 <div class="top3Bottom3">
 
 <div class="feedbackParent">
 
-  <div class="testingFeedback feedbackParentCharcol">
-        <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/design-rss-icon.png">
-        <p class="experienceBox">Newsfeed to keep tabs on lead&#39;s activities</p>
-    </div>
+  <div class="testingFeedback charcolBack white">
+        <!-- <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/design-rss-icon.png"> -->
+        <p class="experienceBox">Article Scroll</p>
+      </div>
 
-    <div class="feedbackP heavyText">
-      <p><b>Love this news feed.</b> We deal with entrepreneurs so <b>having company and individual news side by side is HUGE for us."</b></p>
+      <div class="feedbackP heavyText">
+    <p>"Oh <b>those arrows on the picture are to scroll articles?</b> I would never get that. I thought it was just for pictures</p>
     </div>
 </div>
 
-<div class="feedbackParent">
 
-  <div class="testingFeedback feedbackParentLightOrange">
-      <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png">
-      <p class="experienceBox">Individual search, find a client&#39;s email now! </p>
+ <div class="feedbackParent">
+
+  <div class="testingFeedback charcol lightGreyBack">
+      <!-- <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png"> -->
+      <p class="experienceBox">Read Article</p>
   </div>
 
   <div class="feedbackP heavyText">
-      <p><b>We do look for individual lead too</b>... the ability to have <b>both of these in one location is great."</b></p>
+      <p>This is super easy to read, just scroll down. But I would <b>put these [article feedback] icons higher up so I don't have to scroll through the whole article first to use them?</b></p>
   </div>
 
   </div>
 
-  <div class="feedbackParent">
+<div class="feedbackParent">
 
-    <div class="testingFeedback feedbackParentOrange">
-      <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/design-connect-icon.png">
-      <p class="experienceBox">Connectivity view, assess your relationships</p>
+  <div class="testingFeedback webmdGreenBack white">
+      <!-- <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/design-connect-icon.png"> -->
+      <p class="experienceBox">Biometrics Icon</p>
     </div>
     <div class="feedbackP heavyText">
-      <p>I like the multiple views and <b>the connectivity view I really need this."</b></p>
+        <p>"This icon is too happy<b> I am coming here because I am sick or have a health concern. I don't want to have his happy face staring back at me."</b></p>
     </div>
 
   </div>
@@ -885,7 +904,7 @@
 </div>
 <!-- grandparents -->
 <!-- </div> -->
-
+<!--
 <div><p class="statement webmdBlue">Usability test findings</p></div>
 
 <div class="findings2PParent row center-text">
@@ -900,7 +919,7 @@
     <b>Regarding our interface design </b> the research indicated more tweaks to visuals rather than any major change to the overall functionality. My partner and I battled over whether to have on-boarding, but the users showed us the way, resulting in a clean, fast, and extremely helpful on-boarding process. People loved our analytics, but it was not totally evident at first glance that they were describing the lead list. This indicated more testing was need on our nav placement.
     </p>
   </div>
-</div>
+</div> -->
 
 <div><p class="statement webmdGreen">Design decisions</p></div>
 
@@ -909,7 +928,7 @@
   <div class="decSections">
     <div class="decCircle"><p>1</p></div>
     <div class="decText">
-      <div class="decPoints "><p>Give the salesperson more control over their lead list.</</p></div>
+      <div class="decPoints "><p>P</</p></div>
 
       <div class="approachSubPoints heavyText"><p>Allow them to accept, reject, sort, and re-filter their lists until they are satisfied that they have gotten what they need as well as their money&#39;s worth.</p></div>
 
@@ -926,7 +945,7 @@
       <div class="decCircle"><p class="decNumber">2</p></div>
       <div class="decText">
         <div class="decPoints">
-          <p>Keep the UI fun, fresh and young.</p>
+          <p>Personmalize news feed, significantly reduced clutter</p>
         </div>
 
         <div class="approachSubPoints heavyText">
@@ -957,7 +976,7 @@
 <div class="processSectionTitle">Build &amp Deliver</div>
 
 <div class="build">
-    <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
+    <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding, clear newsfeed, fitness/biometric data, and an easy search.</p>
 </div>
 
 <div><p class="statement beforeAndAfter webmdBlue">Before &amp After</p></div>
@@ -1035,32 +1054,31 @@
 
 <div class="stepsParent">
   <div class="stepsSec">
-    <div class="recTop">Outbound UI &amp Feedback</div>
+    <div class="recTop">More Testing & Design Refinement</div>
     <!-- <div class="phase">P1</div> -->
     <div class="phaseText">
-      <p>- More testing, 1-2 rounds to refine design</p>
-      <p>- Give your clients more control of lists (reject, re-filter, etc.)</p>
-      <p>- Implement on-boarding process, eliminating intensive sign-up process</p>
-      <p>- Implement feedback process, your clients do the work to educate your algorithm</p>
+      <p>- 1-2 rounds of user testing to refine low-fidelity design</p>
+      <p>- A/B testing to choose the best landing page</p>
+      <p>- Fnalized and polish design into a full color mock up</p>
     </div>
   </div>
 
   <div class="stepsSec">
-    <div class="recTop">Newsfeed &amp Profile</div>
+    <div class="recTop">Refine wearble strategy</div>
     <!-- <div class="phase">P2</div> -->
     <div class="phaseText">
-      <p>- Develop company and personal news feed for each lead</p>
-      <p>- Continue to develop new data points for better nurturing </p>
-      <p>- Develop alerts for changes in news and profile information.</p>
+      <p>- Develop co-marketing agreements for novel wearable with an established maker (e.g. Garmin) </p>
+      <p>- Finalize the design of co-marketed wearable</p>
+      <p>- Continue to add other fitness wearbles partners via APIs </p>
     </div>
   </div>
 
   <div class="stepsSec">
-    <div class="recTop">Individual Search</div>
+    <div class="recTop">Partner with other Health Sites</div>
     <!-- <div class="phase">P3</div> -->
     <div class="phaseText">
-      <p>-Consider how you might charge extra for individual search</p>
-      <p>-Implement individual search</p>
+      <p>- Explore partnerships with other, establish, trusted sources of health care information</p>
+      <p>- Continue to expand into new revenue streams: reciprocal links, ads on partner sites, or other joint ventures.</p>
     </div>
   </div>
 <!-- steps parent -->
