fixing linkedin link

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 
   <head>
@@ -838,7 +838,7 @@
   </div>
 
   <div class="feedbackP heavyText">
-    <p class="feedbackPText"><b>"I love this!You have my steps and all my personal news at the top</b>,but still trending articles to keeps me up the latest health news.</p>
+    <p class="feedbackPText"><b>"I love this! You have my steps and all my personal news at the top</b>,but still trending articles to keeps me up the latest health news.</p>
     </div>
 
   </div>
@@ -979,7 +979,7 @@
     <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding, clear newsfeed, fitness/biometric data, and an easy search.</p>
 </div>
 
-<div><p class="statement beforeAndAfter webmdBlue">Before &amp After</p></div>
+<div><p class="statement beforeAndAfter webmdBlue">Inital tested draft vs medium fedility</p></div>
 
 <div class="comparisons">
   <div class="listView">
@@ -1047,8 +1047,8 @@
       </div>
 
     </div>
-    <!-- logo parent -->
-  </div> -->
+    <!logo parent -->
+  <!-- </div> -->
 
 <div class="statement webmdBlue rollOut">Next steps</div>
 
@@ -1107,7 +1107,7 @@
                   <!-- class="footerDivs"> -->
                   <!-- class="col-xs-12 col-sm-5 col-md-6" -->
                 <a class="footerLogos" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
-                <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
+                <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13" target="_blank"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
                 <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
                 </div>
 
