fixed links to git and linked, related to go daddy routing

--- a/webmdtemp1.html
+++ b/webmdtemp1.html
@@ -1107,7 +1107,7 @@
                   <!-- class="footerDivs"> -->
                   <!-- class="col-xs-12 col-sm-5 col-md-6" -->
                 <a class="footerLogos" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
-                <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13" target="_blank"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
+                <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
                 <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
                 </div>
 
